fixes Window constrcutor, adds primitive rendering, new tests, general code cleanup

--- a/tests/texture/fromImage/makefile
+++ b/tests/texture/fromImage/makefile
@@ -1,15 +1,15 @@
 SCC_ROOT_DIR = ../../..
-SCC_OVERRIDE_FLAGS = -DSCC_OVERRIDE_HAVE_MACROS
+SCC_OVERRIDE_FLAGS = -DSCC_OVERRIDE_HAVE_MACROS -DHAVE_SDL_IMAGE
 export SCC_OVERRIDE_FLAGS
 
 CXX = g++
 CXXFLAGS = -I/usr/include/SDL2 -I$(SCC_ROOT_DIR)/include -std=c++11 $(SCC_OVERRIDE_FLAGS)
-LDLIBS = -lSDL2
+LDLIBS = -lSDL2 -lSDL2_image
 
 TESTOBJ = main.o
 SRCDIR = $(SCC_ROOT_DIR)/src
 OBJ = window.o renderer.o texture.o rwops.o
-BIN = blankWindow
+BIN = fromImage
 
 $(BIN) : $(OBJ) $(TESTOBJ)
 	$(CXX) -o $(BIN) $^ $(LDLIBS)
