--- a/tests/window+renderer/resizableWindow/makefile
+++ b/tests/window+renderer/resizableWindow/makefile
@@ -1,12 +1,14 @@
 SCC_ROOT_DIR = ../../..
+SCC_OVERRIDE_FLAGS = -DSCC_OVERRIDE_HAVE_MACROS
+export SCC_OVERRIDE_FLAGS
+
 CXX = g++
-CXXFLAGS = -I/usr/include/SDL2 -I$(SCC_ROOT_DIR)/include -std=c++11 \
-           -DSCC_OVERRIDE_HAVE_MACROS
+CXXFLAGS = -I/usr/include/SDL2 -I$(SCC_ROOT_DIR)/include -std=c++11 $(SCC_OVERRIDE_FLAGS)
 LDLIBS = -lSDL2
 
 TESTOBJ = main.o
 SRCDIR = $(SCC_ROOT_DIR)/src
-OBJ = window.o renderer.o
+OBJ = window.o renderer.o texture.o rwops.o
 BIN = resizableWindow
 
 $(BIN) : $(OBJ) $(TESTOBJ)
