--- a/tests/rwops/load/makefile
+++ b/tests/rwops/load/makefile
@@ -1,15 +1,15 @@
 SCC_ROOT_DIR = ../../..
-SCC_OVERRIDE_FLAGS = -DSCC_OVERRIDE_HAVE_MACROS -DHAVE_SDL_IMAGE -DHAVE_SDL_TTF
+SCC_OVERRIDE_FLAGS = -DSCC_OVERRIDE_HAVE_MACROS
 export SCC_OVERRIDE_FLAGS
 
 CXX = g++
-CXXFLAGS = -I/usr/include/SDL2 -I$(SCC_ROOT_DIR)/include -std=c++11 $(SCC_OVERRIDE_FLAGS)
-LDLIBS = -lSDL2 -lSDL2_image -lSDL2_ttf
+CXXFLAGS = -I/usr/include/SDL2 -I$(SCC_ROOT_DIR)/include -g -std=c++11 $(SCC_OVERRIDE_FLAGS)
+LDLIBS = -lSDL2
 
 TESTOBJ = main.o
 SRCDIR = $(SCC_ROOT_DIR)/src
-OBJ = window.o renderer.o texture.o truetypefont.o surface.o
-BIN = renderText
+OBJ = rwops.o
+BIN = rwopsLoad
 
 $(BIN) : $(OBJ) $(TESTOBJ)
 	$(CXX) -o $(BIN) $^ $(LDLIBS)
