--- a/tests/window+renderer/viewport/makefile
+++ b/tests/window+renderer/viewport/makefile
@@ -9,7 +9,7 @@ LDLIBS = -lSDL2
 TESTOBJ = main.o
 SRCDIR = $(SCC_ROOT_DIR)/src
 OBJ = window.o renderer.o texture.o
-BIN = renderPrimitive
+BIN = viewport
 
 $(BIN) : $(OBJ) $(TESTOBJ)
 	$(CXX) -o $(BIN) $^ $(LDLIBS)
@@ -21,7 +21,7 @@ $(OBJ) :
 	$(MAKE) -C $(SRCDIR) $@
 	mv $(addprefix $(SRCDIR)/, $@) ./
 
-clean:
+clean :
 	rm -f $(TESTOBJ) $(OBJ)
 
 .PHONY: clean
