--- a/tests/audiochunk+audiochannels/playWav/makefile
+++ b/tests/audiochunk+audiochannels/playWav/makefile
@@ -1,31 +1,8 @@
-SCC_ROOT_DIR = ../../..
-SCC_OVERRIDE_FLAGS = -DSCC_OVERRIDE_HAVE_MACROS -DHAVE_SDL_MIXER
-export SCC_OVERRIDE_FLAGS
+SCC_ROOT_DIR := ../../..
+SCC_HAVE_FLAGS := -DHAVE_SDL_MIXER
 
-DEBUG = -g
-export DEBUG
+TESTOBJ := main.o
+OBJ := audiochunk.o rwops.o
+BIN := playWav
 
-CXX = g++
-CXXFLAGS = -I/usr/include/SDL2 -I$(SCC_ROOT_DIR)/include $(DEBUG) -std=c++11 \
-	$(SCC_OVERRIDE_FLAGS)
-LDLIBS = -lSDL2 -lSDL2_mixer
-
-TESTOBJ = main.o
-SRCDIR = $(SCC_ROOT_DIR)/src
-OBJ = audiochunk.o
-BIN = playWav
-
-$(BIN) : $(OBJ) $(TESTOBJ)
-	$(CXX) -o $(BIN) $^ $(LDLIBS)
-
-$(TESTOBJ) : $(TESTOBJ:.o=.cpp)
-	$(CXX) -c -o $@ $^ $(CXXFLAGS)
-
-$(OBJ) :
-	$(MAKE) -C $(SRCDIR) $@
-	mv $(addprefix $(SRCDIR)/, $@) ./
-
-clean:
-	rm -f $(TESTOBJ) $(OBJ)
-
-.PHONY: clean
+include $(SCC_ROOT_DIR)/tests/makefile.tests
