--- a/src/makefile
+++ b/src/makefile
@@ -1,7 +1,9 @@
 SCC_ROOT_DIR = ..
 include $(SCC_ROOT_DIR)/makefile.common
 
-CXXFLAGS = -I$(SDL_INCLUDE_DIR) -I../include -std=c++11 $(DEBUG) \
+INCLUDE_DIRS := -I$(SDL_INCLUDE_DIR) -I../include
+
+CXXFLAGS := $(INCLUDE_DIRS) $(EXTRA_INCLUDE_DIRS) -std=c++11 $(DEBUG) \
 	$(SCC_HAVE_FLAGS)
 
 OBJ := $(patsubst %.cpp,%.o,$(wildcard *.cpp))
