--- a/tests/makefile.tests
+++ b/tests/makefile.tests
@@ -1,8 +1,7 @@
 # common rules for all tests. The makefile that includes this must define
-# SCC_ROOT_DIR, SCC_HAVE_FLAGS, TESTOBJ, OBJ and BIN.
+# SCC_ROOT_DIR, SCC_HAVE_FLAGS, TESTOBJ and BIN.
 
-include $(SCC_ROOT_DIR)/makefile.common
-SRCDIR := $(SCC_ROOT_DIR)/src
+include $(SCC_ROOT_DIR)/tests/makefile.common
 
 # SDL libraries
 LDFLAGS += -L$(SDL_LIB_DIR)
@@ -19,29 +18,25 @@ ifneq (,$(findstring -DHAVE_SDL_TTF, $(SCC_HAVE_FLAGS)))
     LDLIBS += -lSDL2_ttf
 endif
 
-DEBUG = -g
+ifneq (,$(HAVE_GL))
+    INCLUDE_DIRS += -I$(GL_INCLUDE_DIR)
+    LDFLAGS += -L$(GL_LIB_DIR)
+    LDLIBS += -lGL
+endif
+ifneq (,$(HAVE_GLEW))
+    INCLUDE_DIRS += -I$(GLEW_INCLUDE_DIR)
+    LDLIBS += -lGLEW
+endif
 
-# for make recursive calls
-export SCC_HAVE_FLAGS
-export EXTRA_INCLUDE_DIRS
-export DEBUG
+CXXFLAGS := $(INCLUDE_DIRS) -g -std=c++11 $(SCC_HAVE_FLAGS)
 
-OBJPATH := $(addprefix $(OBJDIR)/, $(OBJ))
-
-CXXFLAGS := $(INCLUDE_DIRS) $(EXTRA_INCLUDE_DIRS) $(DEBUG) -std=c++11 \
-	$(SCC_HAVE_FLAGS)
-
-$(BIN) : $(OBJPATH) $(TESTOBJ)
+$(BIN) : $(TESTOBJ)
 	$(CXX) -o $(BIN) $^ $(LDFLAGS) $(LDLIBS)
 
 $(TESTOBJ) : $(TESTOBJ:.o=.cpp)
 	$(CXX) -c -o $@ $^ $(CXXFLAGS)
 
-$(OBJPATH) :
-	$(MAKE) -C $(SRCDIR) $@
-
 clean:
 	rm -f $(TESTOBJ)
-	$(MAKE) -C $(SRCDIR) clean
 
 .PHONY: clean
