updated for automatically defined HAVE macros

--- a/tests/config/makefile
+++ b/tests/config/makefile
@@ -1,11 +1,14 @@
-SCC_ROOT_DIR = ../..
+SCC_ROOT_DIR := ../..
 
-# comment/uncomment the -D flags below to test
-SCC_HAVE_FLAGS = \
-                     # -DHAVE_SDL_IMAGE \
-                     # -DHAVE_SDL_TTF \
-                     # -DHAVE_SDL_MIXER
-TESTOBJ = main.o
-BIN = configTest
+# uncomment according to which headers have been included in main.cpp
+# NOTE: the compiler might complain about those being redefined,
+# but they're necessary to work with makefile.tests,
+# otherwise you'd get a linking error.
+SCC_HAVE_FLAGS := \
+                     #-DHAVE_SDL_IMAGE \
+                     #-DHAVE_SDL_TTF \
+                     #-DHAVE_SDL_MIXER
+TESTOBJ := main.o
+BIN := configTest
 
 include $(SCC_ROOT_DIR)/tests/makefile.tests
